# pdaps

./: .gitignore  .gitmodules  LICENSE  README.md  analyze_pdaps_v2_ablation.py  apply_toy_ratios.py  compute_leak_vs_floor.py  dataloader.py  diagnose_stiffness.py  dps.py  espirit.py  extract_mri_priors.py  make_final_split.py  metrics.py  mri_ops.py  mri_validation.py  mri_validation_2.py  mri_validation_minitest.py  pdaps.py  pdaps_dev.py  pdaps_mri_algo.py  profile_mri_runtime.py  pula.py  pula_sweep.py  pyproject.toml  render_3d.py  run_mri_validation.sh  run_pdaps_bugcheck.py  run_prelaunch_lrmin.sh  smoke_final_comparison.sh  submit_check_abandoned_accel4.sh  submit_check_abandoned_accel8.sh  submit_final_comparison_accel4.sh  submit_final_comparison_accel8.sh  submit_match_nfe.sh  submit_pdaps_ablations_debug.sh  submit_pdaps_v3_accel4.sh  submit_pdaps_v3_accel8.sh  submit_pdaps_v4_accel4.sh  submit_pdaps_v4_accel8.sh  (+30 more)
algo/: pdaps.py  pdaps_core.py  pdaps_tight.py  pula.py
configs/: daps_config.yaml  dps_config.yaml  fastmri_auto_prior.yaml
thesis_figures/: FIGURE_STYLE.md  README.md  fig_annealed_bridge.py  fig_bowl_intuition.py  fig_decoupling.py  fig_dev_noise_collapse.py  fig_dev_nu_progression.py  fig_diffusion.py  fig_gradient_descent.py  fig_kspace_sampling.py  fig_langevin_overdamped.py  fig_ode_pde_sde.py  fig_operator_spectrum.py  fig_preconditioning.py  fig_sampler_structure.py  fig_sampler_trajectories.py  fig_toy_samplers.py  fig_ula_sampling.py  fig_ve_vp.py  fig_wiener.py  landscape.py  ring.py
