[project]
name = "DE_Thesis"
version = "0.1.0"
description = "pDAPS thesis"
requires-python = ">=3.12"
dependencies = [
    "cupy>=14.0.1",
    "einops>=0.8.2",
    "h5py>=3.16.0",
    "hydra-core>=1.3.2",
    "jax>=0.9.1",
    "matplotlib>=3.10.8",
    "sigpy>=0.1.27",
    "torch==2.9.0",
    "wandb>=0.25.0",
]

[tool.uv.workspace]
members = [
    "libs/inversebench",
]

[tool.uv.sources]
inversebench = { workspace = true}
